--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,15 @@
+html, body {
+  height: auto;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Raleway', sans-serif;
+  min-height: 100vh;
+  overflow-y: scroll;
+  background: url('/images/bg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;  
+  /* background-position: center; */
 }
