add pushes into post

--- a/client/src/Portfolio/components/index.css
+++ b/client/src/Portfolio/components/index.css
@@ -72,6 +72,26 @@
     line-height: 1.5;
 }
 
+.postContent__pushes {
+    margin: 0;
+    padding: 15px;
+    line-height: 1.5;
+}
+
+.postContent__pushes {
+    margin: 0;
+    padding: 15px;
+    line-height: 2;
+}
+
+.postContent__pushUser {
+    font-weight: bold;
+}
+
+.postContent__pushContent {
+    margin-left: 0.5rem;
+}
+
 .postContent__loader {
     width: 100%;
     height: 100%;
