add a new css rule for scrolling smooth

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,5 +11,5 @@ body {
   background: url('/images/bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;  
-  /* background-position: center; */
+  -webkit-overflow-scrolling: touch;
 }
